[AAA-510-FED] : Membership Comparison Table : "Category Text" is not aligned correctly in Tablet and Mobile Views

--- a/html-prototype/clientlibs/aaa-core/base/less/membership-comparison-table.less
+++ b/html-prototype/clientlibs/aaa-core/base/less/membership-comparison-table.less
@@ -1,5 +1,5 @@
-//
 // Membership Comparison Table Component
+//
 //
 .modal-dialog {
     position: absolute;
@@ -108,10 +108,15 @@
             border-right: 1px solid #ccc;
             flex: 0 1 100%;
             span {
-                margin-right: 20px;
+                margin-right: 0px;
                 span {
                     margin: 0px;
                 }
+            }
+        }
+        .icon-info {
+            .btn-info {
+                margin-left: 10px;
             }
         }
         div:last-child {
@@ -191,6 +196,17 @@
                 border-left: 0px solid #ccc;
                 border-right: 0px solid #ccc;
                 flex: 0 0 auto;
+            }
+            span {
+                margin-right: 20px;
+                span {
+                    margin: 0px;
+                }
+            }
+            .icon-info {
+                .btn-info {
+                    margin-left: 0px;
+                }
             }
         }
         .membership {
